2012-11-16  Jan Tatarik  <jan.tatarik@gmail.com>

	* gnus-score.el (gnus-score-body):
	* gnus-logic.el (gnus-advanced-body): Don't score by headers when
	scoring by body.

2012-11-16  Glenn Morris  <rgm@gnu.org>

	* gnus-diary.el (nndiary-request-create-group-functions)
	(nndiary-request-update-info-functions)
	(gnus-subscribe-newsgroup-functions)
	(nndiary-request-accept-article-functions):
	Use new names for hooks rather than obsolete aliases.

2012-11-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* dgnushack.el (define-obsolete-variable-alias): Simplify.

2012-11-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-browse-html-parts): Always replace charset
	in meta tag with the one the part specifies in its header.

2012-10-25  Stephen Eglen  <S.J.Eglen@damtp.cam.ac.uk>

	* gnus-dired.el (gnus-dired-attach): Attach to last used message buffer
	by default.

2012-10-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* dgnushack.el (define-compiler-macro): Add autoload for XEmacs 21.4
	and SXEmacs.  Suggested by Nelson Ferreira <nelson.ferreira@ieee.org>.

2012-10-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* dgnushack.el (define-obsolete-variable-alias): Add a compiler-marco
	and a runtime function for it, of which the XEmacs version takes only
	two arguments.

2012-10-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* nndiary.el (nndiary-request-create-group-functions)
	(nndiary-request-update-info-functions)
	(nndiary-request-accept-article-functions):
	* gnus-start.el (gnus-subscribe-newsgroup-functions): Don't use
	"-hooks" suffix.

2012-10-19  Julien Danjou  <julien@danjou.info>

	* gnus-art.el: Require gnus-util because it uses
	`gnus-timer--function'.

2012-10-17  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>  (tiny change)

	* starttls.el (starttls-extra-arguments): Doc fix.

2012-10-09  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-insert): \r is also not inserted, so don't try to delete
	it.

2012-10-06  Glenn Morris  <rgm@gnu.org>
